# cTodo

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-gcc.bat  build.bat  build.ps1  build.sh  setup-command.bat  setup-command.ps1
include/: storage.h  todo.h  ui.h
src/: main.c  storage.c  todo.c  ui.c
